tests/ui/fmt/ifmt-unimpl.stderr
error[E0277]: the trait bound `str: UpperHex` is not satisfied
  --> $DIR/ifmt-unimpl.rs:2:21
   |
LL |     format!("{:X}", "3");
   |     ----------------^^^-
   |     |        |      |
   |     |        |      the trait `UpperHex` is not implemented for `str`
   |     |        required by a bound introduced by this call
   |     in this macro invocation (#1)
  --> $SRC_DIR/alloc/src/macros.rs:LL:COL
   |
   = note: in this expansion of `format!` (#1)
  ::: $SRC_DIR/alloc/src/macros.rs:LL:COL
   |
   = note: in this macro invocation (#2)
  --> $SRC_DIR/core/src/macros/mod.rs:LL:COL
   |
   = note: in this expansion of `$crate::__export::format_args!` (#2)
   |
   = help: the following other types implement trait `UpperHex`:
             isize
             i8
             i16
             i32
             i64
             i128
             usize
             u8
           and 20 others
   = note: required for `&str` to implement `UpperHex`
note: required by a bound in `core::fmt::rt::Argument::<'a>::new_upper_hex`
  --> $SRC_DIR/core/src/fmt/rt.rs:LL:COL

error: aborting due to previous error

For more information about this error, try `rustc --explain E0277`.
